--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -1,13 +1,11 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <h1>HEllO 2222</h1>
+    <p>test usz nha 2222</p>
 </body>
-
 </html>
